--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tamunosiki Portfolio page</title>
     <link rel="stylesheet" href="innocent-tamunosiki/style.css">
+    <!-- using fontawesome -->
     <!-- title icon -->
 </head>
 <style>
@@ -26,6 +27,11 @@
         box-sizing: border-box;
         background-color: #edf1fd;
         position: relative;
+        background-image: url("../inocent-tamunosiki/img/Frame\ 3\ \(1\).jpg");
+        background-repeat: no-repeat;
+        background-size: 1100px;
+        background-position: right bottom;
+
     }
     nav{
         display: flex;
@@ -84,7 +90,7 @@
     }
     .name h1{
         font-family: poppins;
-        font-size: 30px;
+        font-size: 38px;
         font-weight: 600;
         margin: 0px;
         letter-spacing: 3px;
@@ -102,6 +108,7 @@
     cv-btn:hover{
         background-color: #131313;
         transition: all ease 0.5s;
+
     }
 
 </style>
@@ -137,6 +144,13 @@
         </p>
         <!-- cv btn -->
         <a href="#" class="cv-btn">Download CV</a>
+    </div>
+    <!-- socials -->
+    <div class="socails">
+        <a href="#"><i class="i"></i> </a>
+        <a href="#"><i class="i"></i> </a>
+        <a href="#"><i class="i"></i> </a>
+        <a href="#"><i class="i"></i> </a>
     </div>
 </body>
 </html>
